--- a/package.json
+++ b/package.json
@@ -56,14 +56,23 @@
     "@storybook/addons": "^4.1.11",
     "@storybook/channels": "^4.1.11",
     "@storybook/react-native": "^4.1.11",
+    "babel-cli": "^6.26.0",
     "babel-core": "6.26.3",
-    "babel-eslint": "7.1.1",
+    "babel-eslint": "^10.0.1",
     "babel-jest": "^24.8.0",
     "babel-plugin-ignite-ignore-reactotron": "^0.3.0",
     "babel-preset-env": "^1.6.1",
+    "babel-preset-flow": "^6.23.0",
     "babel-preset-react-native": "^4.0.1",
     "enzyme": "^3.2.0",
     "enzyme-adapter-react-16": "^1.1.0",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-prettier": "^4.3.0",
+    "eslint-plugin-import": "^2.17.2",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-prettier": "^3.1.0",
+    "eslint-plugin-react": "^7.13.0",
     "ignite-andross": "^4.0.5",
     "ignite-animatable": "1.0.2",
     "ignite-dev-screens": "2.4.5",
@@ -73,6 +82,8 @@
     "jest": "^24.8.0",
     "metro-react-native-babel-preset": "^0.54.1",
     "mockery": "^2.1.0",
+    "prettier": "^1.17.1",
+    "prettier-eslint": "^8.8.2",
     "react-devtools-core": "3.6.0",
     "react-dom": "16.7.0",
     "react-test-renderer": "16.8.3",
