--- a/package.json
+++ b/package.json
@@ -37,10 +37,12 @@
     "react-native-animatable": "^1.3.2",
     "react-native-config": "^0.11.7",
     "react-native-device-info": "1.6.1",
+    "react-native-elements": "^1.1.0",
     "react-native-firebase": "^5.3.1",
     "react-native-gesture-handler": "1.0.9",
     "react-native-i18n": "2.0.14",
     "react-native-modal": "^11.0.1",
+    "react-native-responsive-screen": "^1.2.2",
     "react-native-vector-icons": "6.1.0",
     "react-navigation": "3.0.0",
     "react-navigation-redux-helpers": "^2.0.6",
