--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,5 +1,6 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
+
 buildscript {
     ext {
         buildToolsVersion = "28.0.3"
@@ -28,6 +29,12 @@ allprojects {
         maven {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
             url "$rootDir/../node_modules/react-native/android"
+        }
+         maven {
+            url 'https://jitpack.io'
+        }
+        maven {
+           url 'https://maven.google.com'
         }
     }
 }
