--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "format-json": "^1.0.3",
     "identity-obj-proxy": "^3.0.0",
     "lodash": "^4.17.11",
+    "moment": "^2.24.0",
     "prop-types": "15.7.2",
     "querystringify": "2.1.0",
     "ramda": "^0.26.1",
@@ -42,7 +43,10 @@
     "react-native-gesture-handler": "1.0.9",
     "react-native-i18n": "2.0.14",
     "react-native-modal": "^11.0.1",
+    "react-native-nodemediaclient": "^0.1.2",
     "react-native-responsive-screen": "^1.2.2",
+    "react-native-status-bar-height": "^2.3.1",
+    "react-native-sticky-keyboard-accessory": "^0.1.3",
     "react-native-vector-icons": "6.1.0",
     "react-navigation": "3.0.0",
     "react-navigation-redux-helpers": "^2.0.6",
@@ -51,7 +55,8 @@
     "redux-persist": "5.10.0",
     "redux-saga": "^1.0.0",
     "reduxsauce": "1.0.1",
-    "seamless-immutable": "^7.1.4"
+    "seamless-immutable": "^7.1.4",
+    "socket.io-client": "^2.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
