--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-native-i18n": "2.0.14",
     "react-native-modal": "^11.0.1",
     "react-native-nodemediaclient": "^0.1.2",
+    "react-native-platform-touchable": "^1.1.1",
     "react-native-responsive-screen": "^1.2.2",
     "react-native-status-bar-height": "^2.3.1",
     "react-native-sticky-keyboard-accessory": "^0.1.3",
